# alife

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.github/workflows/: pages.yml
.superpowers/sdd/: task-1-report.md
assets/: alife_map_blended.tmx  sheet.rgba  sheet.tsx  sketch.json
docs/: tile-design-guide.md
docs/plans/: 2026-06-18-climate-and-seasons.md  2026-06-18-organisms-ecology.md  2026-06-18-world-substrate.md  2026-06-19-static-geography.md  2026-06-20-land-bridges-and-mutation-field.md  2026-06-20-swimming-trait.md  2026-06-20-terrain-aware-movement-and-viewer-stats.md  2026-06-20-wasm-pages-demo.md  2026-06-21-subterranean-refuge.md  2026-06-21-valaar-phase-overlay.md  2026-06-21-valaar-state-machine.md  2026-06-21-viewer-params-and-charts.md  2026-06-23-multi-energy-offset-feeding.md  2026-06-23-quakes-and-reservoir-pools.md
examples/: heatmap.rs
src/: bridges.rs  climate.rs  ecology.rs  field.rs  genome.rs  history.rs  lib.rs  mapsim.rs  organism.rs  params.rs  population.rs  quakes.rs  rng.rs  season.rs  sim.rs  sketch.rs  space.rs  terrain.rs  tilemap.rs  valaar.rs  viewer.rs  world.rs  worldgen.rs
tests/: ecology.rs  gradient.rs
tools/: clean_valaar_coast.py  png_to_rgba.py  sketch_to_map.py  tmx_autotile.py
